<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CheckInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_text_size"
            android:layout_marginTop="@dimen/default_margin"
            android:textStyle="bold"
            android:text="@string/label_evento"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtEventNameCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/text_color"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:textStyle="bold"
            android:text="@string/label_preco"
            android:textColor="@color/text_color"
            android:textSize="@dimen/large_text_size"
            app:layout_constraintStart_toStartOf="@+id/txtEventNameCheckIn"
            app:layout_constraintTop_toBottomOf="@+id/txtEventNameCheckIn" />

        <TextView
            android:id="@+id/txtEventPriceCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:textColor="@color/green"
            android:textSize="@dimen/default_text_size"
            android:text="@string/txt_event_price"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/transparent"
            android:hint="@string/txt_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEventPriceCheckIn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/transparent"
            android:hint="@string/txt_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@color/green"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/label_checkin"
            app:cornerRadius="@dimen/default_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fieldName"
            app:layout_constraintStart_toStartOf="@+id/fieldName"
            app:layout_constraintTop_toBottomOf="@+id/fieldName"
            android:contentDescription="@string/cd_btn_checkin_confirm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>